# generation-of-DWI

./: CMakeLists.txt  createDWItest8.cpp  main.cpp  main.xml
